fixed(slider): images gap
there were a small gap between images which caused the top of the previous image to show

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -368,6 +368,7 @@ body {
     border-radius: 0.1px;
     height: 95vh;
     object-fit: cover;
+    margin-bottom: -3.6px;
   }
   .desk-slide__text-img--left {
     margin: 10% 0 -20px -8%;
