--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -175,6 +175,7 @@
             border-radius: 0.10px;
             height: 95vh;
             object-fit: cover;
+            margin-bottom: -3.6px;
         }
 
         &__text-img--left {
